* pico, generic: fix setting voice by language.
* generic: Add fallback voices for generic languages.
* symbols: Add support for SSML.
* symbols: Add SymbolPreprocFile and PunctuationSymbolPreprocFile directives.
* symbols: Import emojis and unicode font variants support from NVDA and Unicode
CLDR and UnicodeData.
* Disable Mary-TTS module by default.

Version 0.9.1
* Add module for the non-free IBM TTS (voxin) speech synthesis.
* Extend licence to later versions of GPL and LGPL.
* Update mailing list address to savannah.
* Make generic modules fallback to existing voices.

Version 0.9
* Add modules for non-free Baratinoo (VoxyGen) and Kali speech syntheses.
* Add configuration file for the Mary-TTS system.
* Add configuration file for espeak-ng + mbrola.
* Set the pulse client name when using the generic module with paplay.
* espeak-*-mbrola-generic: Update voice list.
* Auto-detect module availability.
* Make generic module provide voice list.
* Add systemd service file.

Version 0.8.8
* Add German translation, thanks to Chris Leick for the patch
* Fix some spelling mistakes, thanks to Paul Gevers for the patch
* Some slight code improvements

Version 0.8.7
* Further fixes to spd-conf, which should now work properly.
* Split the espeak-ng driver code into its own source file.
* Add a work-around to the espeak-ng driver to account for spaces in voice
  names which recently appeared in espeak-ng git master. This will properly
  be fixed in 0.9.
* Voice names are not forced to lower case, due to espeak-ng git master now
  having multi-case voice names.
* Fix stripped audio output from the flite module, thanks to Samuel Thibault.
* Further code and build improvements.

Version 0.8.6
* Various internal code improvements.
* Fix more compiler warnings.
* Python bug fixes with thanks to Sebastian Humenda.

Version 0.8.5
* More unused code removal.
* Fix more compiler warnings.
* Use GLib main loop for the main server thread.