@@ -189,9 +189,9 @@ SymbolPreprocFile "font-variants.dic"
 
 # -- Pulse Audio parameters --
 
-# Pulse audio server name or "default" for the default pulse server
+# Pulse audio device name or "default" for the default pulse device
 
-#AudioPulseServer "default"
+#AudioPulseDevice "default"
 
 #AudioPulseMinLength 1764
 
